--- a/config.yaml
+++ b/config.yaml
@@ -1,18 +1,18 @@
-baseURL: https://nodejh.github.io/hugo-theme-mini
-languageCode: en-us
+#baseURL: https://nodejh.github.io/hugo-theme-mini
+languageCode: zh
 title: Hugo
-theme: hugo-theme-mini
+theme: mini
 paginate: 3
 
 # !!! exampleSite only, you may need to delete the line: `themesDir: ../../` 
-themesDir: ../../
+#themesDir: ../../
 
 hasCJKLanguage: true
 permalinks:
   posts: /posts/:title/
 
-googleAnalytics: UA-123-45
-disqusShortname: nodejh
+#googleAnalytics: UA-123-45
+#disqusShortname: nodejh
 
 
 markup:
@@ -22,14 +22,14 @@ markup:
 
 
 social:
-  github: https://github.com/nodejh
-  twitter: https://github.com/nodejh
-  stackoverflow: https://stackoverflow.com/users/4518882/nodejh
+  github: https://github.com/cruiurc
+#  twitter: https://github.com/cruiurc
+#  stackoverflow: https://stackoverflow.com/users/4518882/nodejh
 
 
 params:
-  author: nodejh
-  bio: Software Engineer
+  author: crui
+  bio: PM
   description: My Blog
   enableRSS: true
   enableComments: true
